{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 820,
  "lineage": "2b87ae7d-8cd4-896c-b8af-9248d2f06523",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "server_blockchain_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd68e85ca5fe71c8",
            "arn": "arn:aws:ec2:us-east-1:975050200162:elastic-ip/eipalloc-0cd68e85ca5fe71c8",
            "associate_with_private_ip": "10.0.1.100",
            "association_id": "eipassoc-0f3d439bde69fa8b1",
            "domain": "vpc",
            "id": "eipalloc-0cd68e85ca5fe71c8",
            "instance": "i-0dd3060a2d04c5a89",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02e9e95467a752b78",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-34-202-27-130.compute-1.amazonaws.com",
            "public_ip": "34.202.27.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elasctic-IP-For-Prod-Server"
            },
            "tags_all": {
              "Name": "Elasctic-IP-For-Prod-Server"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.server-blockchain",
            "aws_key_pair.deployer",
            "aws_network_interface.tesis_network_interface",
            "aws_security_group.tesis_blokchain_server_security_group",
            "aws_subnet.tesis_public_subnet",
            "aws_vpc.tesis_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.key-proy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server-blockchain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a640b520696dc6a8",
            "arn": "arn:aws:ec2:us-east-1:975050200162:instance/i-0dd3060a2d04c5a89",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd3060a2d04c5a89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-02e9e95467a752b78"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e9e95467a752b78",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0859b97240554a648",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c0e6164c9b5ea82",
            "tags": {
              "Name": "Server-Prod-Blockchain"
            },
            "tags_all": {
              "Name": "Server-Prod-Blockchain"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06ae11bfd1bb01e4e"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_network_interface.tesis_network_interface",
            "aws_security_group.tesis_blokchain_server_security_group",
            "aws_subnet.tesis_public_subnet",
            "aws_vpc.tesis_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.key-proy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tesis_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050200162:internet-gateway/igw-07af46d64ac45d910",
            "id": "igw-07af46d64ac45d910",
            "owner_id": "975050200162",
            "vpc_id": "vpc-04256d44a6aefeb14"
          },
          "dependencies": [
            "aws_vpc.tesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "tesis_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050200162:network-interface/eni-02e9e95467a752b78",
            "id": "eni-02e9e95467a752b78",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:32:fa:45:4e:77",
            "owner_id": "975050200162",
            "private_ip": "10.0.1.100",
            "private_ip_list": [
              "10.0.1.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06ae11bfd1bb01e4e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c0e6164c9b5ea82",
            "tags": {
              "Name": "Network-Interface-Prod-Server"
            },
            "tags_all": {
              "Name": "Network-Interface-Prod-Server"
            }
          },
          "dependencies": [
            "aws_security_group.tesis_blokchain_server_security_group",
            "aws_subnet.tesis_public_subnet",
            "aws_vpc.tesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tesis_public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050200162:route-table/rtb-0a0beb99543bc1af8",
            "id": "rtb-0a0beb99543bc1af8",
            "owner_id": "975050200162",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07af46d64ac45d910",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07af46d64ac45d910",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04256d44a6aefeb14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tesis_public_internet_gateway",
            "aws_vpc.tesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tesis_public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0336054c4d7195bf1",
            "route_table_id": "rtb-0a0beb99543bc1af8",
            "subnet_id": "subnet-08c0e6164c9b5ea82"
          },
          "dependencies": [
            "aws_internet_gateway.tesis_public_internet_gateway",
            "aws_route_table.tesis_public_subnet_route_table",
            "aws_subnet.tesis_public_subnet",
            "aws_vpc.tesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tesis_blokchain_server_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050200162:security-group/sg-06ae11bfd1bb01e4e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all trafic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ae11bfd1bb01e4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rule for HTTP alt protocol",
                "from_port": 5108,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5108
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rule for HTTP alt protocol",
                "from_port": 5208,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5208
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rule for HTTP alt protocol",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rule for HTTP alt protocol",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rule for HTTP protocol",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rule for HTTPS  protocol",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240627202914499400000001",
            "name_prefix": "terraform-",
            "owner_id": "975050200162",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blockchain security group"
            },
            "tags_all": {
              "Name": "blockchain security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04256d44a6aefeb14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tesis_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050200162:subnet/subnet-02fcc4a233c697b89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fcc4a233c697b89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050200162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04256d44a6aefeb14"
          },
          "dependencies": [
            "aws_vpc.tesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tesis_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050200162:subnet/subnet-08c0e6164c9b5ea82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c0e6164c9b5ea82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050200162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04256d44a6aefeb14"
          },
          "dependencies": [
            "aws_vpc.tesis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tesis_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050200162:vpc/vpc-04256d44a6aefeb14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b86e6d314b448e9",
            "default_route_table_id": "rtb-0b167345b0dab62b6",
            "default_security_group_id": "sg-0241668a830594c57",
            "dhcp_options_id": "dopt-074f7dc252b883463",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04256d44a6aefeb14",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b167345b0dab62b6",
            "owner_id": "975050200162",
            "tags": {
              "Name": "VPC-Tesis"
            },
            "tags_all": {
              "Name": "VPC-Tesis"
            }
          }
        }
      ]
    }
  ]
}